# Trabalho-01-Metodos-Numericos-1-Raizes-de-Equacoes

./: .gitignore  CMakeLists.txt  MetodoNewton.hpp  MetodoNewtonFL.hpp  README.md  main.cpp
Funcao/: EqCorda.hpp
Função/: EqCorda.hpp  Polinomio.cpp  Polinomio.hpp  polinomio.hpp
GUI/: CMakeLists.txt  MainWindow.cpp  MainWindow.hpp  main.cpp  mainwindow.cpp  mainwindow.hpp  mainwindow.ui
Metodos/: MetodoAbstrato.hpp  MetodoNewton.hpp  MetodoNewtonDdxNum.hpp  MetodoNewtonFL.hpp
Métodos/: MetodoNewton.hpp  MetodoNewtonFL.hpp
Quadros/: ResultadoMetodo.hpp
SRC/: main.cpp
SRC/Excecao/: brokenRopeException.hpp  maxIterException.hpp  tooCloseToZeroException.hpp
SRC/Funcao/: EqCorda.hpp
SRC/Metodos/: MetodoNewton.hpp  MetodoNewtonAbstrato.hpp  MetodoNewtonDdxNum.hpp  MetodoNewtonFL.hpp
SRC/Quadros/: ResultadoMetodo.hpp
output/: main
